# cars

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config-docker.yaml  config.yaml  docker-compose.yaml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/domain/: mod.rs
api/src/error/: mod.rs
api/src/routes/: mod.rs
api/src/routes/lot_vehicle/: mod.rs
browser/: Cargo.toml
browser/src/: browser.rs  error.rs  lib.rs  main.rs  pool.rs  request.rs
browser/src/copart/: adapter.rs  browser.rs  error.rs  mod.rs  pool.rs  request.rs  response.rs
browser/src/copart/browser/: mod.rs  smf.rs
browser/src/copart/browser/handlers/: cmd.rs  engine.rs  http.rs  mod.rs  ws.rs
common/: Cargo.toml
common/src/: config.rs  io.rs  kafka.rs  lib.rs  logging.rs  memprof.rs
common/src/bucket/: mod.rs  models.rs  policies.rs
common/src/persistence/: diesel.toml  mod.rs  models.rs  schema.rs
common/src/persistence/migrations/2025-07-08-235152_create_lot_vehicle/: down.sql  up.sql
common/src/persistence/migrations/2025-07-08-235201_create_lot_image/: down.sql
common/src/persistence/migrations/2025-10-13-163159_change_primary_key_on_lot_vehicle/: down.sql  up.sql
frontend-hidevin/: next.config.ts  package.json  pnpm-lock.yaml
frontend-hidevin/app/: globals.css  layout.tsx  page.tsx
frontend-hidevin/app/vin/[vin]/: page.tsx
frontend-hidevin/components/: footer.tsx  hero-section.tsx  how-it-works-section.tsx  navigation.tsx  removal-section.tsx  services-section.tsx  theme-provider.tsx  theme-toggle.tsx  vehicle-gallery.tsx  vehicle-info.tsx
imgsync/: Cargo.toml
imgsync/src/: main.rs
imgsync/src/copart/: adapter.rs  mod.rs  requester.rs  sink.rs  uploader.rs
panel/: Cargo.toml  README.md
panel/src/: app.rs  main.rs
persister/: Cargo.toml  diesel.toml
persister/migrations/2025-07-08-235201_create_lot_image/: up.sql
persister/src/: lib.rs  main.rs
persister/src/bucket/: mod.rs  models.rs
persister/src/copart/: adapter.rs  error.rs  mod.rs  sink.rs
persister/src/orm/: mod.rs  models.rs  schema.rs
playground/: Cargo.toml
proxy/: Cargo.toml  config.yaml
proxy/src/: main.rs  proxy.rs
requester/: Cargo.toml
requester/src/: main.rs
requester/src/copart/: adapter.rs  client.rs  io.rs  mod.rs  pool.rs  response.rs  sink.rs
sched/: Cargo.toml
sched/src/: copart.rs  lib.rs  main.rs
ticker/: Cargo.toml
ticker/src/: copart.rs  lib.rs  main.rs
