[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
persister = { path = "../persister" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
axum = "0.8.4"
tracing = "0.1.41"
diesel = { version = "2.2.10", features = ["postgres"] }
diesel-async = { version = "0.6.1", features = ["deadpool", "postgres"] }
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"