[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common", features = ["persistence"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
axum = { version = "0.8.4", features = ["macros"] }
tracing = "0.1.41"
diesel = { version = "2.2.10", features = ["postgres"] }
diesel-async = { version = "0.7.3", features = ["deadpool", "postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
chrono = { version = "0.4.42", features = ["serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"