[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
chromiumoxide = "0.7.0"
tracing = "0.1.41"
common = { path = "../common", features = ["kafka", "io", "config"] }
async-trait = "0.1.88"
chrono = "0.4.42"
