[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38.0", features = ["cmake-build"], optional = true }
tokio-util = { version = "0.7.15", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
tokio = { version = "1.45.1", optional = true }
tracing = { version = "0.1.41", optional = true }
uuid = { version = "1.17.0", features = ["v4"], optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
tracing-loki = { version = "0.2.6", optional = true }

[features]
default = ["logging"]
logging = ["tracing-loki", "tracing-subscriber", "tokio"]
kafka = ["rdkafka", "tokio-util", "serde", "serde_json", "tokio", "tracing", "uuid"]