[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38.0", features = ["cmake-build"], optional = true }
tokio-util = { version = "0.7.15", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
tokio = { version = "1.45.1", optional = true }
tracing = { version = "0.1.41", optional = true }
uuid = { version = "1.17.0", features = ["v4"], optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
tracing-loki = { version = "0.2.6", optional = true }
async-trait = { version = "0.1.88", optional = true }
thiserror = { version = "2.0.12", optional = true }
chromiumoxide = { version = "0.7.0", optional = true }
base64 = { version = "0.22.1", optional = true }
diesel = { version = "2.2.10", features = ["postgres"], optional = true }
diesel-async = { version = "0.6.1", features = ["deadpool", "postgres"], optional = true }
url = { version = "2.5.4", optional = true }
axum = { version = "0.8.4", optional = true }
jemalloc_pprof = { version = "0.8.1", features = ["flamegraph"], optional = true }
dotenvy = { version = "0.15.7", optional = true }
mime_guess = { version = "2.0.5", optional = true }
aws-sdk-s3 = { version = "1.106.0", features = ["behavior-version-latest"], optional = true }

[features]
default = ["logging"]
logging = ["tracing-loki", "tracing-subscriber", "tokio"]
kafka = ["rdkafka", "tokio-util", "serde", "serde_json", "tokio", "tracing", "uuid", "async-trait", "thiserror"]
io = ["chromiumoxide", "base64", "diesel", "diesel-async", "url", "thiserror", "serde", "serde_json", "kafka"]
memprof = ["axum", "jemalloc_pprof", "tokio", "tokio-util"]
persistence = ["diesel", "diesel-async", "dotenvy"]
bucket = ["mime_guess", "aws-sdk-s3"]