[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full", "http1", "client"] }
hyper-util = { version = "0.1.14", features = ["client", "tokio"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
serde_yaml = "0.9.33"
env_logger = "0.11.8"
