[package]
name = "requester"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common", features = ["kafka"] }
browser = { path = "../browser" }
tokio-util = "0.7.15"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
reqwest = "0.12.20"
futures = "0.3.31"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"

[dev-dependencies]
wiremock = "0.6.4"
testcontainers-modules = { version = "0.12.1", features = ["kafka"] }
uuid = { version = "1.17.0", features = ["v4"] }
