[package]
name = "sched"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-util = "0.7.15"
common = { path = "../common", features = ["kafka", "io"] }
async-trait = "0.1.88"
futures = "0.3.31"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["test-util"] }

