[package]
name = "sched"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
common = { path = "../common", features = ["kafka", "io", "config"] }
async-trait = "0.1.88"
chrono = "0.4.42"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["test-util"] }

