[package]
name = "ticker"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-util = "0.7.15"
common = { path = "../common" }
browser = { path = "../browser" }
uuid = { version = "1.17.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-loki = "0.2.6"
console-subscriber = "0.4.1"
